[package]
name = "mdbook-i18n"
version = "0.1.2"
authors = ["funkill2 <funkill2@gmail.com>"]
edition = "2018"
exclude = ["/examples/*", '/.dependabot/*']
keywords = ["book", "mdbook", "l10n", "localization"]
repository = "https://github.com/funkill/mdbook-i18n"
description = "L10n/i18n plugin for mdbook"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4"
toml = "0.5"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1"

[[bin]]
doc = false
name = "mdbook-i18n"
